k8s/05-ingress-typesense.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: typesense
  namespace: typesense
  labels:
    ID: "20381"
  annotations:
    cert-manager.io/cluster-issuer: acdh-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
    - host: typesense.acdh-dev.oeaw.ac.at
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: typesense
                port:
                  number: 8108

    - host: typesense.acdh.oeaw.ac.at
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: typesense
                port:
                  number: 8108

  tls:
    - hosts:
        - typesense.acdh-dev.oeaw.ac.at
        - typesense.acdh.oeaw.ac.at
      secretName: typesense-acdh-dev-tls
